microserv-parking/src/main/java/org/example/microservparking/error/exception/ExistException.java
package org.example.microservparking.error.exception;

public class ExistException extends RuntimeException{
    public ExistException(String message) {
        super(message);
    }
}
